--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -85,293 +85,294 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
-* Abau: {{t-simple|aau|langname=Abau|huok}}
-* Abenaki: {{t-simple|abe|langname=Abenaki|piks}}
-* Abkhaz: {{t|ab|аҳәа}}
-* Abu' Arapesh: {{t-simple|aah|langname=Abu' Arapesh|bul}}
-* Acehnese: {{t-simple|ace|langname=Acehnese|bui}}
-* Adyghe: {{t|ady|къо}}, {{t|ady|хъо}}
-* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
-* Agarabi: {{t-simple|agd|langname=Agarabi|pon}}
-* Albanian: {{t-simple|interwiki=1|sq|langname=Albanian|derr|g=m}}, {{t-simple|interwiki=1|sq|langname=Albanian|thi|g=m}}
-* Ama: {{t-simple|amm|langname=Ama|fu}}
-* Amanab: {{t-simple|amn|langname=Amanab|tata}}
-* Amharic: {{t+|am|አሳማ}}
-* Aneme Wake: {{t-simple|aby|langname=Aneme Wake|boro}}
-* Ansus: {{t-simple|and|langname=Ansus|tapui}}
+{{multitrans|data=
+* Abau: {{tt|aau|huok}}
+* Abenaki: {{tt|abe|piks}}
+* Abkhaz: {{tt|ab|аҳәа}}
+* Abu' Arapesh: {{tt|aah|bul}}
+* Acehnese: {{tt|ace|bui}}
+* Adyghe: {{tt|ady|къо}}, {{tt|ady|хъо}}
+* Afrikaans: {{tt+|af|vark}}
+* Agarabi: {{tt|agd|pon}}
+* Albanian: {{tt+|sq|derr|m}}, {{tt+|sq|thi|m}}
+* Ama: {{tt|amm|fu}}
+* Amanab: {{tt|amn|tata}}
+* Amharic: {{tt+|am|አሳማ}}
+* Aneme Wake: {{tt|aby|boro}}
+* Ansus: {{tt|and|tapui}}
 * Apache:
-*: Western Apache: {{t-simple|apw|langname=Western Apache|góchiʼ}}
-* Arabic: {{t|ar|خِنْزِير|m}}, {{t|ar|حَلُوف|m}}
-*: Egyptian Arabic: {{t|arz|خنزير|m|tr=ḵanzīr}}, {{t|arz|حلوف|m|tr=ḥalūf}}
-*: Gulf Arabic: {{t|afb|خنزير|m|tr=ḵanzīr}}
-*: Moroccan Arabic: {{t|ary|حلوف|tr=ḥallūf}}, {{t|ary|خنزير|tr=ḵanzīr}}
-*: North Levantine Arabic: {{t|apc|خنزير|m|tr=ḵanzīr}}
+*: Western Apache: {{tt|apw|góchiʼ}}
+* Arabic: {{tt|ar|خِنْزِير|m}}, {{tt|ar|حَلُوف|m}}
+*: Egyptian Arabic: {{tt|arz|خنزير|m|tr=ḵanzīr}}, {{tt|arz|حلوف|m|tr=ḥalūf}}
+*: Gulf Arabic: {{tt|afb|خنزير|m|tr=ḵanzīr}}
+*: Moroccan Arabic: {{tt|ary|حلوف|tr=ḥallūf}}, {{tt|ary|خنزير|tr=ḵanzīr}}
+*: North Levantine Arabic: {{tt|apc|خنزير|m|tr=ḵanzīr}}
 * Aramaic:
-*: Hebrew: {{t|arc|חזירא|tr=ħzīrā’|m}}, {{t|arc|חזירתא|tr=ħzīrtā’|f}}
-*: Syriac: {{t|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{t|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
-* Armenian: {{t+|hy|խոզ}}
-* Aromanian: {{t-simple|rup|porcu|langname=Aromanian|g=m}}
-* Assamese: {{t|as|গাহৰি}}
-* Asturian: {{t-simple|interwiki=1|ast|langname=Asturian|gochu|m}}, {{t-simple|interwiki=1|ast|langname=Asturian|gocha|f}}
-* Atayal: {{t-simple|tay|langname=Atayal|bzyok}}
-* Avar: {{t|av|болъон}}
-* Azerbaijani: {{t-simple|interwiki=1|az|langname=Azerbaijani|donuz}}
-* Bahnar: {{t|bdq|nhŭng}}
-* Balinese: {{t|ban|celeng}}
-* Bashkir: {{t|ba|сусҡа}}
-* Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
-* Bau Bidayuh: {{t|sne|oyuo}}
-* Belarusian: {{t|be|свіння́|f}}
-* Bengali: {{t|bn|শুওর}}
-* Bouyei: {{t|pcc|duezmul}}, {{t|pcc|mul}}
-* Breton: {{t+|br|pemoc'h|m}}
-* Brunei Malay: {{t|kxd|bayi}}
-* Buginese: {{t|bug|bawi}}
-* Bulgarian: {{t+|bg|свиня́|f}}
-* Burmese: {{t+|my|ဝက်}}
-* Catalan: {{t+|ca|porc|m}}
-* Cebuano: {{t|ceb|baboy}}
-* Central Melanau: {{t|mel|babui}}
-* Chamicuro: {{t|ccc|kuuchi}}
-* Chamorro: {{t|ch|babui}}
-* Chechen: {{t|ce|хьакха}}, {{t|ce|жаргӏа}}
-* Chepang: {{t|cdm|प्‍याक्‌}}
-* Cherokee: {{t|chr|ᏏᏆ}}
-* Chichewa: {{t|ny|nkhumba}}
-* Chickasaw: {{t|cic|shokha'}}
+*: Hebrew: {{tt|arc|חזירא|tr=ħzīrā’|m}}, {{tt|arc|חזירתא|tr=ħzīrtā’|f}}
+*: Syriac: {{tt|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{tt|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
+* Armenian: {{tt+|hy|խոզ}}
+* Aromanian: {{tt|rup|porcu|m}}
+* Assamese: {{tt|as|গাহৰি}}
+* Asturian: {{tt+|ast|gochu|m}}, {{tt+|ast|gocha|f}}
+* Atayal: {{tt|tay|bzyok}}
+* Avar: {{tt|av|болъон}}
+* Azerbaijani: {{tt+|az|donuz}}
+* Bahnar: {{tt|bdq|nhŭng}}
+* Balinese: {{tt|ban|celeng}}
+* Bashkir: {{tt|ba|сусҡа}}
+* Basque: {{tt+|eu|urde}}, {{tt+|eu|zerri}}, {{tt+|eu|txerri}}
+* Bau Bidayuh: {{tt|sne|oyuo}}
+* Belarusian: {{tt|be|свіння́|f}}
+* Bengali: {{tt|bn|শুওর}}
+* Bouyei: {{tt|pcc|duezmul}}, {{tt|pcc|mul}}
+* Breton: {{tt+|br|pemoc'h|m}}
+* Brunei Malay: {{tt|kxd|bayi}}
+* Buginese: {{tt|bug|bawi}}
+* Bulgarian: {{tt+|bg|свиня́|f}}
+* Burmese: {{tt+|my|ဝက်}}
+* Catalan: {{tt+|ca|porc|m}}
+* Cebuano: {{tt|ceb|baboy}}
+* Central Melanau: {{tt|mel|babui}}
+* Chamicuro: {{tt|ccc|kuuchi}}
+* Chamorro: {{tt|ch|babui}}
+* Chechen: {{tt|ce|хьакха}}, {{tt|ce|жаргӏа}}
+* Chepang: {{tt|cdm|प्‍याक्‌}}
+* Cherokee: {{tt|chr|ᏏᏆ}}
+* Chichewa: {{tt|ny|nkhumba}}
+* Chickasaw: {{tt|cic|shokha'}}
 * Chinese:
-*: Cantonese: {{t|yue|豬}}, {{t|yue|猪|tr=zyu1}}
-*: Dungan: {{t|dng|җў}}
-*: Gan: {{t|gan|豬}}, {{t|gan|猪|tr=jy1}}
-*: Hakka: {{t|hak|豬}}, {{t|hak|猪|tr=chû}}, {{t|hak|豬仔}}, {{t|hak|猪仔|tr=chû-é}}
-*: Jin: {{t|cjy|豬}}, {{t|cjy|猪|tr=zu1}}
-*: Mandarin: {{t+|cmn|豬}}, {{t+|cmn|猪|tr=zhū}}, {{t+|cmn|豬玀}}, {{t+|cmn|猪猡|tr=zhūluó}}, {{t+|cmn|豕|tr=shǐ}} {{qualifier|classical, obsolete}}
-*: Min Dong: {{t|cdo|豬}}, {{t|cdo|猪|tr=dṳ̆}}
-*: Min Nan: {{t+|nan|豬}}, {{t|nan|猪|tr=ti, tu}}, {{t+|nan|豬仔}}, {{t|nan|猪仔|tr=ti-á, tu-á}}
-*: Wu: {{t|wuu|豬玀}}, {{t|wuu|猪猡|tr=tsr lu}}
-*: Xiang: {{t|hsn|豬}}, {{t|hsn|猪|tr=jy1}}
-* Chuvash: {{t|cv|сысна}}
-* Comox: {{t|coo|kʷašu}}
-* Cornish: {{t|kw|hogh|m}}, {{t|kw|mogh|p}}
-* Cree: {{t|cr|kohkôs}}
-* Czech: {{t+|cs|prase|n}}, {{t+|cs|vepř|m}}, {{t+|cs|svině|f}}
+*: Cantonese: {{tt|yue|豬}}, {{tt|yue|猪|tr=zyu1}}
+*: Dungan: {{tt|dng|җў}}
+*: Gan: {{tt|gan|豬}}, {{tt|gan|猪|tr=jy1}}
+*: Hakka: {{tt|hak|豬}}, {{tt|hak|猪|tr=chû}}, {{tt|hak|豬仔}}, {{tt|hak|猪仔|tr=chû-é}}
+*: Jin: {{tt|cjy|豬}}, {{tt|cjy|猪|tr=zu1}}
+*: Mandarin: {{tt+|cmn|豬}}, {{tt+|cmn|猪|tr=zhū}}, {{tt+|cmn|豬玀}}, {{tt+|cmn|猪猡|tr=zhūluó}}, {{tt+|cmn|豕|tr=shǐ}} {{qualifier|classical, obsolete}}
+*: Min Dong: {{tt|cdo|豬}}, {{tt|cdo|猪|tr=dṳ̆}}
+*: Min Nan: {{tt+|nan|豬}}, {{tt|nan|猪|tr=ti, tu}}, {{tt+|nan|豬仔}}, {{tt|nan|猪仔|tr=ti-á, tu-á}}
+*: Wu: {{tt|wuu|豬玀}}, {{tt|wuu|猪猡|tr=tsr lu}}
+*: Xiang: {{tt|hsn|豬}}, {{tt|hsn|猪|tr=jy1}}
+* Chuvash: {{tt|cv|сысна}}
+* Comox: {{tt|coo|kʷašu}}
+* Cornish: {{tt|kw|hogh|m}}, {{tt|kw|mogh|p}}
+* Cree: {{tt|cr|kohkôs}}
+* Czech: {{tt+|cs|prase|n}}, {{tt+|cs|vepř|m}}, {{tt+|cs|svině|f}}
 * Da'a Kaili: {{t-check|kzf|vavu}} {{qualifier|Rai Kaili}}
-* Dalmatian: {{t|dlm|puarc|m}}
-* Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
-* Drung: {{t|duu|waq}}
-* Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
-* Eastern Cham: {{t|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{t|cjm|ꨂꩆ|tr=un}}
-* Eastern Mari: {{t|chm|сӧсна}}
+* Dalmatian: {{tt|dlm|puarc|m}}
+* Danish: {{tt+|da|svin|n}}, {{tt+|da|gris|c}}
+* Drung: {{tt|duu|waq}}
+* Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|varken|n}}
+* Eastern Cham: {{tt|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{tt|cjm|ꨂꩆ|tr=un}}
+* Eastern Mari: {{tt|chm|сӧсна}}
 * Egyptian: {{t-egy|rrj|h=r:*r-i-E12}}
-* Erzya: {{t|myv|туво}}
-* Ese: {{t|mcq|maha}}
-* Esperanto: {{qualifier|♂♀}} {{t+|eo|porko}}, {{qualifier|♂}} {{t|eo|virporko}}, {{qualifier|neologism, ♂}} {{t|eo|porkiĉo}}, {{qualifier|♀}} {{t|eo|porkino}}
-* Estonian: {{t+|et|siga}}, {{t|et|põrsas}}
-* Evenki: {{t|evn|сунюрин}}
-* Faroese: {{t|fo|svín|n}}
-* Fijian: {{t|fj|vuaka}}
-* Finnish: {{t+|fi|sika}}
-* French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
-*: Old French: {{t|fro|porc|m}}, {{t|fro|bacon|m}}
-* Friulian: {{t|fur|purcit|m}}
-* Galician: {{t+|gl|porco|m}}, {{t+|gl|cocho|m}}, {{t+|gl|verrón|m}}, {{t|gl|bacarote|m}}, {{t|gl|currincho|m}}, {{t+|gl|corricho|m}}, {{t|gl|canavés|m}}, {{t+|gl|reco|m}}, {{t|gl|renco|m}}, {{t|gl|rencho|m}}, {{t|gl|quino|m}}, {{t|gl|melco|m}}
-* Georgian: {{t+|ka|ღორი}}
-* German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t+|de|Hausschwein|n}},, {{t+|de|Sau|f}} {{qualifier|archaic or dialectal}}
-*: Alemannic German: {{t|gsw|Sou|f}}
-*: Franconian: {{t|de|Mocke|f}}
-*: Regional German: {{t+|de|Docke|f}}, {{t+|de|Wutz|f}}
-*: Swabian: {{t|de|Kosel|f}}
-* Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n}}
-* Greek: {{t+|el|γουρούνι|n}}
-*: Ancient: {{t|grc|ὗς|m|f}}, {{t|grc|χοῖρος|m}}
-* Greenlandic: {{t|kl|puuluki}}
-* Guerrero Amuzgo: {{t|amu|kítzku}}
-* Gujarati: {{t+|gu|ડુક્કર|m}}, {{t|gu|શૂકર|m}}
-* Hausa: {{t|ha|alade}}
-* Hawaiian: {{t|haw|puaʻa}}
-* Hebrew: {{t+|he|חֲזִיר|m|tr=khazír}}
-* Hindi: {{t+|hi|सूअर|m}}
-* Hopi: {{t|hop|pitsooti}}
-* Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
-* Hunsrik: {{t|hrx|Schwein|n}}
-* Iban: {{t|iba|jani}}, {{t|iba|babi}}
-* Icelandic: {{t+|is|svín|n}}
-* Ido: {{qualifier|♂♀}} {{t+|io|porko}}, {{qualifier|♂}} {{t+|io|porkulo}}, {{qualifier|♂♀}} {{t+|io|porkino}}
-* Ilocano: {{t|ilo|baboy}}
-* Imonda: {{t|imn|malhu}}
-* Inabaknon: {{t|abx|baktin}}
-* Indonesian: {{t+|id|babi}}
-* Interlingua: {{t|ia|porco}}
-* Irish: {{t+|ga|muc|f}}
-* Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
-* Iu Mien: {{t|ium|dungz}}
-* Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta}}
-* Javanese: {{t+|jv|babi}}
-* Jeju: {{t|jje|도새기|tr=dosaegi}}
-* Jingpho: {{t|kac|wa'}}
-* Kabardian: {{t|kbd|кхъуэ}}
-* Kannada: {{t+|kn|ಹಂದಿ}}
-* Karelian: {{t|krl|počči}}
-* Kazakh: {{t+|kk|шошқа}}
-* Khasi: {{t|kha|sniang}}
-* Khmer: {{t+|km|ជ្រូក}}
-* Kimaragang: {{t|kqr|wogok}}
-* Koho: {{t|kpm|sur}}, {{t|kpm|un}}
-* Kombio: {{t|xbi|wurokn}}
-* Korean: {{t+|ko|돼지}}
-* Krisa: {{t|ksi|a}}
-* Kumyk: {{t|kum|донгуз|tr=doñuz}}
-* Kurdish: {{t+|ku|beraz|m}}, {{t+|ku|xinzîr|m}}, {{t+|ku|xûk|m}}
-*: Central Kurdish: {{t|ckb|بەراز}}
-* Kyrgyz: {{t+|ky|чочко}}
-* Ladin: {{t|lld|porcel}}
-* Lao: {{t+|lo|ໝູ}}
-* Latgalian: {{t|ltg|cyuka|f}}
-* Latin: {{t+|la|sūs|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
-* Latvian: {{t+|lv|cūka|f}}
+* Erzya: {{tt|myv|туво}}
+* Ese: {{tt|mcq|maha}}
+* Esperanto: {{qualifier|♂♀}} {{tt+|eo|porko}}, {{qualifier|♂}} {{tt|eo|virporko}}, {{qualifier|neologism, ♂}} {{tt|eo|porkiĉo}}, {{qualifier|♀}} {{tt|eo|porkino}}
+* Estonian: {{tt+|et|siga}}, {{tt|et|põrsas}}
+* Evenki: {{tt|evn|сунюрин}}
+* Faroese: {{tt|fo|svín|n}}
+* Fijian: {{tt|fj|vuaka}}
+* Finnish: {{tt+|fi|sika}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}, {{tt+|fr|pourceau|m}}
+*: Old French: {{tt|fro|porc|m}}, {{tt|fro|bacon|m}}
+* Friulian: {{tt|fur|purcit|m}}
+* Galician: {{tt+|gl|porco|m}}, {{tt+|gl|cocho|m}}, {{tt+|gl|verrón|m}}, {{tt|gl|bacarote|m}}, {{tt|gl|currincho|m}}, {{tt+|gl|corricho|m}}, {{tt|gl|canavés|m}}, {{tt+|gl|reco|m}}, {{tt|gl|renco|m}}, {{tt|gl|rencho|m}}, {{tt|gl|quino|m}}, {{tt|gl|melco|m}}
+* Georgian: {{tt+|ka|ღორი}}
+* German: {{tt+|de|Schwein|n}}, {{qualifier|domestic}} {{tt+|de|Hausschwein|n}},, {{tt+|de|Sau|f}} {{qualifier|archaic or dialectal}}
+*: Alemannic German: {{tt|gsw|Sou|f}}
+*: Franconian: {{tt|de|Mocke|f}}
+*: Regional German: {{tt+|de|Docke|f}}, {{tt+|de|Wutz|f}}
+*: Swabian: {{tt|de|Kosel|f}}
+* Gothic: {{tt|got|𐍃𐍅𐌴𐌹𐌽|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+*: Ancient: {{tt|grc|ὗς|m|f}}, {{tt|grc|χοῖρος|m}}
+* Greenlandic: {{tt|kl|puuluki}}
+* Guerrero Amuzgo: {{tt|amu|kítzku}}
+* Gujarati: {{tt+|gu|ડુક્કર|m}}, {{tt|gu|શૂકર|m}}
+* Hausa: {{tt|ha|alade}}
+* Hawaiian: {{tt|haw|puaʻa}}
+* Hebrew: {{tt+|he|חֲזִיר|m|tr=khazír}}
+* Hindi: {{tt+|hi|सूअर|m}}
+* Hopi: {{tt|hop|pitsooti}}
+* Hungarian: {{tt+|hu|sertés}}, {{tt+|hu|disznó}}, {{tt+|hu|malac}}
+* Hunsrik: {{tt|hrx|Schwein|n}}
+* Iban: {{tt|iba|jani}}, {{tt|iba|babi}}
+* Icelandic: {{tt+|is|svín|n}}
+* Ido: {{qualifier|♂♀}} {{tt+|io|porko}}, {{qualifier|♂}} {{tt+|io|porkulo}}, {{qualifier|♂♀}} {{tt+|io|porkino}}
+* Ilocano: {{tt|ilo|baboy}}
+* Imonda: {{tt|imn|malhu}}
+* Inabaknon: {{tt|abx|baktin}}
+* Indonesian: {{tt+|id|babi}}
+* Interlingua: {{tt|ia|porco}}
+* Irish: {{tt+|ga|muc|f}}
+* Italian: {{tt+|it|maiale|m}}, {{tt+|it|porco|m}}, {{tt+|it|suino|m}}
+* Iu Mien: {{tt|ium|dungz}}
+* Japanese: {{tt+|ja|豚|tr=ぶた, buta}}, {{tt+|ja|ブタ|tr=buta}}
+* Javanese: {{tt+|jv|babi}}
+* Jeju: {{tt|jje|도새기|tr=dosaegi}}
+* Jingpho: {{tt|kac|wa'}}
+* Kabardian: {{tt|kbd|кхъуэ}}
+* Kannada: {{tt+|kn|ಹಂದಿ}}
+* Karelian: {{tt|krl|počči}}
+* Kazakh: {{tt+|kk|шошқа}}
+* Khasi: {{tt|kha|sniang}}
+* Khmer: {{tt+|km|ជ្រូក}}
+* Kimaragang: {{tt|kqr|wogok}}
+* Koho: {{tt|kpm|sur}}, {{tt|kpm|un}}
+* Kombio: {{tt|xbi|wurokn}}
+* Korean: {{tt+|ko|돼지}}
+* Krisa: {{tt|ksi|a}}
+* Kumyk: {{tt|kum|донгуз|tr=doñuz}}
+* Kurdish: {{tt+|ku|beraz|m}}, {{tt+|ku|xinzîr|m}}, {{tt+|ku|xûk|m}}
+*: Central Kurdish: {{tt|ckb|بەراز}}
+* Kyrgyz: {{tt+|ky|чочко}}
+* Ladin: {{tt|lld|porcel}}
+* Lao: {{tt+|lo|ໝູ}}
+* Latgalian: {{tt|ltg|cyuka|f}}
+* Latin: {{tt+|la|sūs|c}}, {{tt+|la|porcus|m}}<!--do not put the scientific name here-->
+* Latvian: {{tt+|lv|cūka|f}}
 * Ledo Kaili: {{t-check|lew|bavu}}
-* Limburgish: {{t+|li|zwien}}, {{t+|li|verke}}
-* Lithuanian: {{t+|lt|kiaulė|f}}
-* Livonian: {{t|liv|sigā}}
-* Low German: {{t+|nds|Swien|n}}
-* Ludian: {{t|lud|šiga}}
+* Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
+* Lithuanian: {{tt+|lt|kiaulė|f}}
+* Livonian: {{tt|liv|sigā}}
+* Low German: {{tt+|nds|Swien|n}}
+* Ludian: {{tt|lud|šiga}}
 {{trans-mid}}
-* Luganda: {{t|lg|embizzi}}
-* Lusitanian: {{t|xls|porcom}}, {{t|xls|porgom}}
-* Luxembourgish: {{t|lb|Schwäin|n}}
-* Lü: {{t|khb|ᦖᦴ}}
-* Macedonian: {{t|mk|свиња|f}}
-* Malagasy: {{t+|mg|kisoa}}
-* Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
-* Malayalam: {{t+|ml|പന്നി}}
-* Maltese: {{t|mt|ħanżir|m}}, {{t|mt|qażquż|m}}
-* Maléku Jaíka: {{t|gut|tunhífa}}
-* Manchu: {{t|mnc|ᡠᠯᡤᡳᠶᠠᠨ}}
-* Mandar: {{t|mdr|boe}}
-* Manx: {{t|gv|muc|f}}
-* Maori: {{t|mi|poaka}}
-* Marathi: {{t|mr|डुकर|m}}
-* Mazanderani: {{t|mzn|خی|tr=xi}}
-* Menominee: {{t|mez|kōhkōs}}
-* Mi'kmaq: {{t|mic|gulgwi's|an}}
-* Moksha: {{t|mdf|тува}}
-* Mon: {{t|mnw|ကၠိက်}}
-* Mongolian: {{t+|mn|гахай}}
-* Montagnais: {{t|moe|kukush}}
-* Motu: {{t|meu|boroma}}
-* Mountain Koiari: {{t|kpx|ovo}}
-* Nahuatl: {{t+|nah|pitzotl}}
-* Navajo: {{t|nv|bisóodi|sc=Latn}}
-* Nepali: {{t+|ne|सुँगुर}}
-* Newar: {{t|new|फा }}
-* Ngazidja Comorian: {{t|zdj|purunku}}
-* Nii: {{t|nii|kung}}
-* Nivkh: {{t|niv|овӻоӈ}}
-* Norman: {{t|nrf|couochon|m}} {{qualifier|Jersey}}, {{t|nrf|bête à saie|f}} {{qualifier|Jersey}}, {{t|nrf|por|m}} {{qualifier|Jersey}}, {{t|nrf|gronneux|m}} {{qualifier|Jersey}}, {{t|nrf|moussieu|m}} {{qualifier|Jersey}}, {{t|nrf|quétot|m}} {{qualifier|Jersey}}
-* North Frisian: {{t|frr|Swin}} {{qualifier|Sylt}}
-* Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
+* Luganda: {{tt|lg|embizzi}}
+* Lusitanian: {{tt|xls|porcom}}, {{tt|xls|porgom}}
+* Luxembourgish: {{tt|lb|Schwäin|n}}
+* Lü: {{tt|khb|ᦖᦴ}}
+* Macedonian: {{tt|mk|свиња|f}}
+* Malagasy: {{tt+|mg|kisoa}}
+* Malay: {{tt+|ms|babi}}, {{tt+|ms|khinzir}}
+* Malayalam: {{tt+|ml|പന്നി}}
+* Maltese: {{tt|mt|ħanżir|m}}, {{tt|mt|qażquż|m}}
+* Maléku Jaíka: {{tt|gut|tunhífa}}
+* Manchu: {{tt|mnc|ᡠᠯᡤᡳᠶᠠᠨ}}
+* Mandar: {{tt|mdr|boe}}
+* Manx: {{tt|gv|muc|f}}
+* Maori: {{tt|mi|poaka}}
+* Marathi: {{tt|mr|डुकर|m}}
+* Mazanderani: {{tt|mzn|خی|tr=xi}}
+* Menominee: {{tt|mez|kōhkōs}}
+* Mi'kmaq: {{tt|mic|gulgwi's|an}}
+* Moksha: {{tt|mdf|тува}}
+* Mon: {{tt|mnw|ကၠိက်}}
+* Mongolian: {{tt+|mn|гахай}}
+* Montagnais: {{tt|moe|kukush}}
+* Motu: {{tt|meu|boroma}}
+* Mountain Koiari: {{tt|kpx|ovo}}
+* Nahuatl: {{tt+|nah|pitzotl}}
+* Navajo: {{tt|nv|bisóodi|sc=Latn}}
+* Nepali: {{tt+|ne|सुँगुर}}
+* Newar: {{tt|new|फा }}
+* Ngazidja Comorian: {{tt|zdj|purunku}}
+* Nii: {{tt|nii|kung}}
+* Nivkh: {{tt|niv|овӻоӈ}}
+* Norman: {{tt|nrf|couochon|m}} {{qualifier|Jersey}}, {{tt|nrf|bête à saie|f}} {{qualifier|Jersey}}, {{tt|nrf|por|m}} {{qualifier|Jersey}}, {{tt|nrf|gronneux|m}} {{qualifier|Jersey}}, {{tt|nrf|moussieu|m}} {{qualifier|Jersey}}, {{tt|nrf|quétot|m}} {{qualifier|Jersey}}
+* North Frisian: {{tt|frr|Swin}} {{qualifier|Sylt}}
+* Norwegian: {{tt+|no|svin|n}}, {{tt+|no|gris|m}}
 * Novial: {{t-needed|nov}}
-* Nyunga: {{t|nys|beerk}}
-* Occitan: {{t+|oc|pòrc|m}}, {{t|oc|puèrc|m}}
-* Ojibwe: {{t|oj|gookoosh}}
-* Okinawan: {{t|ryu|うゎー|tr=wā}}
-* Old Church Slavonic: {{t|cu|свиниꙗ|f}}
-* Old English: {{t|ang|swīn|n}}
-* Old Turkic: {{t|otk|𐱃𐰆𐰭𐰆𐰕|ts=toŋuz}}
-* Oriya: {{t|or|ଘୁଷୁରିଛୁଆ}}
-* Ossetian: {{t|os|хуы}}
-* Ottawa: {{t|otw|gookoosh}}
-* Pacoh: {{t|pac|alic}}, {{t|pac|alíc}}
-* Palauan: {{t|pau|babii}}
-* Pashto: {{t+|ps|خنځير|m|tr=xanjír}}, {{t|ps|خوګ|m|tr=xug}}
-* Persian: {{t+|fa|خوک|tr=xuk}}
-* Plautdietsch: {{t+|pdt|Schwien|n}}
-* Polish: {{t+|pl|świnia|f}}
-* Portuguese: {{t+|pt|porco|m}}, {{t+|pt|suíno|m}}
-* Potawatomi: {{t|pot|kokosh}}
-* Punjabi: {{t+|pa|ਸੂਰ|m}}
-* Quechua: {{t|qu|khuchi}}
-* Rapa Nui: {{t|rap|oru}}
-* Romani: {{t|rom|balo|m}}, {{t|rom|bali|f}}
-* Romanian: {{t+|ro|porc|m}}
-* Romansch: {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}, {{t|rm|chucal|m}}
-* Russian: {{t+|ru|свинья́|f}}, {{t+|ru|бо́ров|m}} {{qualifier|boar}}
-* S'gaw Karen: {{t|ksw|ထိး}}
+* Nyunga: {{tt|nys|beerk}}
+* Occitan: {{tt+|oc|pòrc|m}}, {{tt|oc|puèrc|m}}
+* Ojibwe: {{tt|oj|gookoosh}}
+* Okinawan: {{tt|ryu|うゎー|tr=wā}}
+* Old Church Slavonic: {{tt|cu|свиниꙗ|f}}
+* Old English: {{tt|ang|swīn|n}}
+* Old Turkic: {{tt|otk|𐱃𐰆𐰭𐰆𐰕|ts=toŋuz}}
+* Oriya: {{tt|or|ଘୁଷୁରିଛୁଆ}}
+* Ossetian: {{tt|os|хуы}}
+* Ottawa: {{tt|otw|gookoosh}}
+* Pacoh: {{tt|pac|alic}}, {{tt|pac|alíc}}
+* Palauan: {{tt|pau|babii}}
+* Pashto: {{tt+|ps|خنځير|m|tr=xanjír}}, {{tt|ps|خوګ|m|tr=xug}}
+* Persian: {{tt+|fa|خوک|tr=xuk}}
+* Plautdietsch: {{tt+|pdt|Schwien|n}}
+* Polish: {{tt+|pl|świnia|f}}
+* Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|suíno|m}}
+* Potawatomi: {{tt|pot|kokosh}}
+* Punjabi: {{tt+|pa|ਸੂਰ|m}}
+* Quechua: {{tt|qu|khuchi}}
+* Rapa Nui: {{tt|rap|oru}}
+* Romani: {{tt|rom|balo|m}}, {{tt|rom|bali|f}}
+* Romanian: {{tt+|ro|porc|m}}
+* Romansch: {{tt|rm|portg|m}}, {{tt|rm|piertg|m}}, {{tt|rm|püerch|m}}, {{tt|rm|chucal|m}}
+* Russian: {{tt+|ru|свинья́|f}}, {{tt+|ru|бо́ров|m}} {{qualifier|boar}}
+* S'gaw Karen: {{tt|ksw|ထိး}}
 * Sami:
-*: Inari Sami: {{t|smn|šahe}}
-*: Kildin Sami: {{t|sjd|шагкь}}
-*: Northern Sami: {{t|se|spiidni}}
-*: Skolt Sami: {{t|sms|šââ´ǩǩ}}
-* Samoan: {{t|sm|pua'a}}
-* Sango: {{t|sg|gaduru}}, {{t|sg|ngûru}}
-* Sanskrit: {{t+|sa|सूकर}}
-* Santali: {{t|sat|ᱥᱩᱠᱨᱤ}}
-* Sardinian: {{t|sc|porcu}}, {{t|sc|polcu|m}}, {{t|sc|procu|m}}, {{t|sc|mannale}}, {{t|sc|mannali}}
-*: Campidanese: {{t|sc|procu|m}}, {{t|sc|mannali|m}}, {{t|sc|sue|f}}
-* Scottish Gaelic: {{t|gd|muc|f}}
-* Sebop: {{t|sib|bu'in}}
+*: Inari Sami: {{tt|smn|šahe}}
+*: Kildin Sami: {{tt|sjd|шагкь}}
+*: Northern Sami: {{tt|se|spiidni}}
+*: Skolt Sami: {{tt|sms|šââ´ǩǩ}}
+* Samoan: {{tt|sm|pua'a}}
+* Sango: {{tt|sg|gaduru}}, {{tt|sg|ngûru}}
+* Sanskrit: {{tt+|sa|सूकर}}
+* Santali: {{tt|sat|ᱥᱩᱠᱨᱤ}}
+* Sardinian: {{tt|sc|porcu}}, {{tt|sc|polcu|m}}, {{tt|sc|procu|m}}, {{tt|sc|mannale}}, {{tt|sc|mannali}}
+*: Campidanese: {{tt|sc|procu|m}}, {{tt|sc|mannali|m}}, {{tt|sc|sue|f}}
+* Scottish Gaelic: {{tt|gd|muc|f}}
+* Sebop: {{tt|sib|bu'in}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|сви́ња|f}}
-*: Roman: {{t+|sh|svínja|f}}
-* Shan: {{t+|shn|မူ}}
-* Sichuan Yi: {{t|ii|ꃮ}}, {{t|ii|ꃢ}} {{qualifier|literary}}
-* Sicilian: {{t+|scn|porcu|m}},  {{t+|scn|majali|m}}
-* Sinhalese: {{t+|si|ඌරා}}
-* Slovak: {{t+|sk|prasa|n}}, {{t+|sk|sviňa|f}}
-* Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t|sl|pujs|m}}
+*: Cyrillic: {{tt|sh|сви́ња|f}}
+*: Roman: {{tt+|sh|svínja|f}}
+* Shan: {{tt+|shn|မူ}}
+* Sichuan Yi: {{tt|ii|ꃮ}}, {{tt|ii|ꃢ}} {{qualifier|literary}}
+* Sicilian: {{tt+|scn|porcu|m}},  {{tt+|scn|majali|m}}
+* Sinhalese: {{tt+|si|ඌරා}}
+* Slovak: {{tt+|sk|prasa|n}}, {{tt+|sk|sviňa|f}}
+* Slovene: {{tt+|sl|svinja|f}}, {{tt+|sl|prašič|m}}, {{tt|sl|pujs|m}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|swinja|f}}
-*: Upper Sorbian: {{t|hsb|swinjo|n}}
-* Spanish: {{t+|es|cerdo|m}}, {{t+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{t+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{t+|es|coche|m}} {{qualifier|Guatemala}}, {{t+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{t|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{t+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{t+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{t+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{t+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{t+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{t+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{t+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{t+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{t+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{t+|es|tunco|m}} {{qualifier|El Salvador}}, {{t|es|pitzote}} {{qualifier|early modern Mexico}}
-* Swahili: {{t+|sw|nguruwe}}
-* Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
-* Sylheti: {{t|syl|ꠉꠣꠠꠤꠀ}}
-* Tagal Murut: {{t|mvv|bawi}}, {{t|mvv|biag}}
-* Tagalog: {{t+|tl|baboy}}
-* Tajik: {{t+|tg|хук}}
-* Tamil: {{t+|ta|பன்றி}}
-* Taos: {{t|twf|kùciʼína}}
-* Tatar: {{t+|tt|дуңгыз}}, {{t+|tt|чучка}}
-* Telugu: {{t+|te|పంది}}, {{t+|te|సూకరము|m}}
-* Tetum: {{t|tet|fahi}}
-* Thai: {{t+|th|หมู}}
-* Tibetan: {{t|bo|ཕག་པ}}
-* Timugon Murut: {{t|tih|bawi}}
-* Tocharian B: {{t|txb|suwo}}
-* Tok Pisin: {{t|tpi|pik}}
-* Tolai: {{t|ksd|boroi}}
-* Tongan: {{t|to|puaka}}
-* Tswana: {{t|tn|kolobe|c9|c10}}
-* Turkish: {{t+|tr|domuz}}, {{t+|tr|hınzır}}
-* Turkmen: {{t|tk|doňuz}}
-* Tuvan: {{t|tyv|хаван}}
-* Ubir: {{t|ubr|foro}}
-* Udmurt: {{t|udm|парсь}}
-* Ukrainian: {{t|uk|свиня́|f}}
-* Urat: {{t|urt|hro'}}
-* Urdu: {{t|ur|خوک|tr=xūk}}, {{t|ur|خنزیر|tr=xanzīr}}, {{t|ur|سؤر|m|tr=sūar}}
-* Urhobo: {{t|urh|esi}}
-* Uyghur: {{t|ug|چوشقا}}
-* Uzbek: {{t|uz|choʻchka}}
-* Venetian: {{t+|vec|mas-cio|m}}, {{t|vec|porselo|m}}, {{t|vec|porzèl|m}}
-* Veps: {{t|vep|siga}}
-* Vietnamese: {{t+|vi|heo}}, {{t+|vi|lợn}}, {{t+|vi|cúi}}
-* Volapük: {{qualifier|♂♀}} {{t+|vo|svin}}, {{qualifier|♂}} {{t+|vo|hisvin}}, {{qualifier|♀}} {{t+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{t|vo|omsvin}}, {{t|vo|domasvin}} {{qualifier|domestic}}
-* Voro: {{t|vor|tsiga}}
-* Votic: {{t|vot|sika}}
-* Walloon: {{t+|wa|pourcea}}, {{t+|wa|coshet|m}}
-* Waray-Waray: {{t|war|baboy}}
-* Warembori: {{t|wsa|pue}}
-* Welsh: {{t+|cy|mochyn|m}}
-* West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
-* West Frisian: {{t|fy|baarch|c}}
-* White Hmong: {{t|mww|npua}}
-* Wolof: {{t|wo|mbam-xuux|alt=mbam-xuux mi}}
-* Yiddish: {{t|yi|חזיר|tr=khazer|m}}, {{t|yi|כאַזער|m}}
-* Yup'ik: {{t|esu|sitiinkaq}}
-* Zazaki: {{t|zza|xoz}}, {{t|zza|xenzir}}
-* Zhuang: {{t|za|mou}}
-* Zulu: {{t+|zu|ingulube|c9/10}}
+*: Lower Sorbian: {{tt|dsb|swinja|f}}
+*: Upper Sorbian: {{tt|hsb|swinjo|n}}
+* Spanish: {{tt+|es|cerdo|m}}, {{tt+|es|chancho|m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, {{tt+|es|chon|m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, {{tt+|es|coche|m}} {{qualifier|Guatemala}}, {{tt+|es|cochi|m}} {{qualifier|Northwestern Mexico}}, {{tt|es|cochín|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|cochino|m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, {{tt+|es|cocho|m}} {{qualifier|Northern Spain|specifically Leon}}, {{tt+|es|cuchi|m}} {{qualifier|Northern Central and Northwestern Argentina}}, {{tt+|es|cuto|m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, {{tt+|es|gocho|m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, {{tt+|es|gorrino}} {{qualifier|Southern Central and Eastern Central Spain}}, {{tt+|es|guarro|m}} {{qualifier|Western Spain|specifically Extremadura}}, {{tt+|es|marrano|m}} {{qualifier|Central and Western Venezuela|Colombia}}, {{tt+|es|puerco|m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, {{tt+|es|tocino|m}} {{qualifier|Northern Spain|specifically Aragon}}, {{tt+|es|tunco|m}} {{qualifier|El Salvador}}, {{tt|es|pitzote}} {{qualifier|early modern Mexico}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Swedish: {{tt+|sv|gris|c}}, {{tt+|sv|svin|n}}
+* Sylheti: {{tt|syl|ꠉꠣꠠꠤꠀ}}
+* Tagal Murut: {{tt|mvv|bawi}}, {{tt|mvv|biag}}
+* Tagalog: {{tt+|tl|baboy}}
+* Tajik: {{tt+|tg|хук}}
+* Tamil: {{tt+|ta|பன்றி}}
+* Taos: {{tt|twf|kùciʼína}}
+* Tatar: {{tt+|tt|дуңгыз}}, {{tt+|tt|чучка}}
+* Telugu: {{tt+|te|పంది}}, {{tt+|te|సూకరము|m}}
+* Tetum: {{tt|tet|fahi}}
+* Thai: {{tt+|th|หมู}}
+* Tibetan: {{tt|bo|ཕག་པ}}
+* Timugon Murut: {{tt|tih|bawi}}
+* Tocharian B: {{tt|txb|suwo}}
+* Tok Pisin: {{tt|tpi|pik}}
+* Tolai: {{tt|ksd|boroi}}
+* Tongan: {{tt|to|puaka}}
+* Tswana: {{tt|tn|kolobe|c9|c10}}
+* Turkish: {{tt+|tr|domuz}}, {{tt+|tr|hınzır}}
+* Turkmen: {{tt|tk|doňuz}}
+* Tuvan: {{tt|tyv|хаван}}
+* Ubir: {{tt|ubr|foro}}
+* Udmurt: {{tt|udm|парсь}}
+* Ukrainian: {{tt|uk|свиня́|f}}
+* Urat: {{tt|urt|hro'}}
+* Urdu: {{tt|ur|خوک|tr=xūk}}, {{tt|ur|خنزیر|tr=xanzīr}}, {{tt|ur|سؤر|m|tr=sūar}}
+* Urhobo: {{tt|urh|esi}}
+* Uyghur: {{tt|ug|چوشقا}}
+* Uzbek: {{tt|uz|choʻchka}}
+* Venetian: {{tt+|vec|mas-cio|m}}, {{tt|vec|porselo|m}}, {{tt|vec|porzèl|m}}
+* Veps: {{tt|vep|siga}}
+* Vietnamese: {{tt+|vi|heo}}, {{tt+|vi|lợn}}, {{tt+|vi|cúi}}
+* Volapük: {{qualifier|♂♀}} {{tt+|vo|svin}}, {{qualifier|♂}} {{tt+|vo|hisvin}}, {{qualifier|♀}} {{tt+|vo|jisvin}}, {{qualifier|obsolete, ♂}} {{tt|vo|omsvin}}, {{tt|vo|domasvin}} {{qualifier|domestic}}
+* Voro: {{tt|vor|tsiga}}
+* Votic: {{tt|vot|sika}}
+* Walloon: {{tt+|wa|pourcea}}, {{tt+|wa|coshet|m}}
+* Waray-Waray: {{tt|war|baboy}}
+* Warembori: {{tt|wsa|pue}}
+* Welsh: {{tt+|cy|mochyn|m}}
+* West Coast Bajau: {{tt|bdr|menungal}}, {{tt|bdr|ogok}}, {{tt|bdr|bakas}}
+* West Frisian: {{tt|fy|baarch|c}}
+* White Hmong: {{tt|mww|npua}}
+* Wolof: {{tt|wo|mbam-xuux|alt=mbam-xuux mi}}
+* Yiddish: {{tt|yi|חזיר|tr=khazer|m}}, {{tt|yi|כאַזער|m}}
+* Yup'ik: {{tt|esu|sitiinkaq}}
+* Zazaki: {{tt|zza|xoz}}, {{tt|zza|xenzir}}
+* Zhuang: {{tt|za|mou}}
+* Zulu: {{tt+|zu|ingulube|c9/10}}
 {{trans-bottom}}
 
 {{trans-see|piglet}}
@@ -379,130 +380,131 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{trans-see|pork}}
 
 {{trans-top|someone who overeats or eats rapidly}}
-* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
-* Armenian: {{t+|hy|խոզ}}, {{t+|hy|կաշալոտ}}
-* Catalan: {{t+|ca|golafre|m}}
-* Dutch: {{t+|nl|varken|n}}, {{t+|nl|zwijn|n}}, {{t+|nl|slokop|m|f}}
-* Esperanto: {{t+|eo|porko}}
-* Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
-* French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
-* German: {{t+|de|Fresssack|m}}, {{t|de|Fress-Sack|m}}, {{t+|de|Schwein|n}}, {{t+|de|Vielfraß|m}}
-* Greek: {{t+|el|γουρούνι|n}}
-* Icelandic: {{t+|is|svín|n}}
-* Irish: {{t|ga|alpaire|m}}, {{t|ga|alpachán|m}}, {{t|ga|craosaire|m}}, {{t+|ga|muc|f}}, {{t|ga|pórc|m}}
-* Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
-* Macedonian: {{t|mk|свиња|f}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}, {{tt+|hy|կաշալոտ}}
+* Catalan: {{tt+|ca|golafre|m}}
+* Dutch: {{tt+|nl|varken|n}}, {{tt+|nl|zwijn|n}}, {{tt+|nl|slokop|m|f}}
+* Esperanto: {{tt+|eo|porko}}
+* Finnish: {{tt+|fi|porsas}}, {{tt+|fi|sika}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}
+* German: {{tt+|de|Fresssack|m}}, {{tt|de|Fress-Sack|m}}, {{tt+|de|Schwein|n}}, {{tt+|de|Vielfraß|m}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Icelandic: {{tt+|is|svín|n}}
+* Irish: {{tt|ga|alpaire|m}}, {{tt|ga|alpachán|m}}, {{tt|ga|craosaire|m}}, {{tt+|ga|muc|f}}, {{tt|ga|pórc|m}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}}
+* Macedonian: {{tt|mk|свиња|f}}
 {{trans-mid}}
-* Norwegian: {{t|no|storeter|m}}
-* Portuguese: {{t+|pt|porco|m}}
-* Romanian: {{t+|ro|porc|m}}
+* Norwegian: {{tt|no|storeter|m}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Romanian: {{tt+|ro|porc|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
-*: Roman: {{t+|sh|svinja|f}}, {{t+|sh|krme|n}}
-* Swahili: {{t+|sw|nguruwe}}
-* Turkish: {{t+|tr|obur}}
-* Walloon: {{t+|wa|pourcea|m}}, {{t+|wa|coshet|m}}
-* Welsh: {{t+|cy|mochyn|m}}
-* Yiddish: {{t|yi|חזיר|m|tr=khazer}}
-* Zazaki: {{t|zza|séxur}}
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|obur}}
+* Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
+* Yiddish: {{tt|yi|חזיר|m|tr=khazer}}
+* Zazaki: {{tt|zza|séxur}}
 {{trans-bottom}}
 
 {{trans-top|nasty or disgusting person}}
-* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
-* Armenian: {{t+|hy|խոզ}}
-* Czech: {{t+|cs|prase|n}}
-* Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|smeerlap|m}}
-* Finnish: {{t+|fi|sika}}
-* French: {{t+|fr|salaud|m}}, {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
-* Galician: {{t+|gl|cocho|m}}, {{t|gl|porcallón|m}}
-* German: {{t+|de|Schwein|n}}
-* Greek: {{t+|el|γουρούνι|n}}
-* Hindi: {{t+|hi|सूअर|m}}
-* Icelandic: {{t+|is|svín|n}}
-* Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}} {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}
-* Latvian: {{t+|lv|cūka|f}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}
+* Czech: {{tt+|cs|prase|n}}
+* Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|smeerlap|m}}
+* Finnish: {{tt+|fi|sika}}
+* French: {{tt+|fr|salaud|m}}, {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}, {{tt+|fr|pourceau|m}}
+* Galician: {{tt+|gl|cocho|m}}, {{tt|gl|porcallón|m}}
+* German: {{tt+|de|Schwein|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Hindi: {{tt+|hi|सूअर|m}}
+* Icelandic: {{tt+|is|svín|n}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}} {{tt+|it|bastardo|m}}, {{tt+|it|bastarda|f}}, {{tt+|it|stronzo|m}}, {{tt+|it|stronza|f}}
+* Latvian: {{tt+|lv|cūka|f}}
 {{trans-mid}}
-* Macedonian: {{t|mk|свиња|f}}
-* Portuguese: {{t+|pt|porco|m}}, {{t+|pt|nojento|m}}
-* Romanian: {{t+|ro|porc|m}}
-* Russian: {{t+|ru|свинья́|f}}
+* Macedonian: {{tt|mk|свиња|f}}
+* Portuguese: {{tt+|pt|porco|m}}, {{tt+|pt|nojento|m}}
+* Romanian: {{tt+|ro|porc|m}}
+* Russian: {{tt+|ru|свинья́|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
-*: Roman: {{t+|sh|svinja|f}}, {{t+|sh|krme|n}}
-* Slovene: {{t+|sl|svinja|f}}, {{t|sl|prasec|m}}
-* Swahili: {{t+|sw|nguruwe}}
-* Turkish: {{t+|tr|tiksindirici}}
-* Walloon: {{t+|wa|pourcea|m}}
-* Welsh: {{t+|cy|mochyn|m}}
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Slovene: {{tt+|sl|svinja|f}}, {{tt|sl|prasec|m}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|tiksindirici}}
+* Walloon: {{tt+|wa|pourcea|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
 {{trans-bottom}}
 
 {{trans-top|dirty or slovenly person}}
-* Afrikaans: {{t-simple|interwiki=1|af|langname=Afrikaans|vark}}
-* Armenian: {{t+|hy|խոզ}}
-* Czech: {{t+|cs|prase|n}}, {{t+|cs|čuně|n}}
-* Dutch: {{t+|nl|varken|n}}
-* Finnish: {{t+|fi|sika}}, {{t+|fi|sottapytty}}
-* French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
-* German: {{t|de|Dreckschwein|n}}, {{t|de|Dreckspatz|m}}, {{t+|de|Ferkel|n}}, {{t|de|Saubartel|m}} (regional), {{t+|de|Schmierfink|m}}, {{t+|de|Schmutzfink|m}}, {{t+|de|Schwein|n}}, {{t|de|Schweinigel|m}}, {{t+|de|Wutz|m}} (regional)
-* Greek: {{t+|el|γουρούνι|n}}, {{t|el|βρωμιάρης|m}}
-* Indonesian: {{t+|id|babi}}
-* Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
-* Latvian: {{t+|lv|cūka|f}}
-* Macedonian: {{t|mk|свиња|f}}
+* Afrikaans: {{tt+|af|vark}}
+* Armenian: {{tt+|hy|խոզ}}
+* Czech: {{tt+|cs|prase|n}}, {{tt+|cs|čuně|n}}
+* Dutch: {{tt+|nl|varken|n}}
+* Finnish: {{tt+|fi|sika}}, {{tt+|fi|sottapytty}}
+* French: {{tt+|fr|cochon|m}}, {{tt+|fr|porc|m}}
+* German: {{tt|de|Dreckschwein|n}}, {{tt|de|Dreckspatz|m}}, {{tt+|de|Ferkel|n}}, {{tt|de|Saubartel|m}} (regional), {{tt+|de|Schmierfink|m}}, {{tt+|de|Schmutzfink|m}}, {{tt+|de|Schwein|n}}, {{tt|de|Schweinigel|m}}, {{tt+|de|Wutz|m}} (regional)
+* Greek: {{tt+|el|γουρούνι|n}}, {{tt|el|βρωμιάρης|m}}
+* Indonesian: {{tt+|id|babi}}
+* Italian: {{tt+|it|porco|m}}, {{tt+|it|maiale|m}}
+* Latvian: {{tt+|lv|cūka|f}}
+* Macedonian: {{tt|mk|свиња|f}}
 {{trans-mid}}
-* Portuguese: {{t+|pt|porco|m}}
-* Romanian: {{t+|ro|porc|m}}
-* Russian: {{t+|ru|свинья́|f}}, {{t+|ru|сви́нтус|m}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Romanian: {{tt+|ro|porc|m}}
+* Russian: {{tt+|ru|свинья́|f}}, {{tt+|ru|сви́нтус|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|свиња|f}}, {{t|sh|крме|n}}
-*: Roman: {{t+|sh|svinja|f}}, {{t+|sh|krme|n}}
-* Slovene: {{t+|sl|prašič|m}}
-* Swahili: {{t+|sw|nguruwe}}
-* Turkish: {{t+|tr|pasaklı}}
-* Walloon: {{t+|wa|pourcea|m}}, {{t+|wa|coshet|m}}
-* Welsh: {{t+|cy|mochyn|m}}
+*: Cyrillic: {{tt|sh|свиња|f}}, {{tt|sh|крме|n}}
+*: Roman: {{tt+|sh|svinja|f}}, {{tt+|sh|krme|n}}
+* Slovene: {{tt+|sl|prašič|m}}
+* Swahili: {{tt+|sw|nguruwe}}
+* Turkish: {{tt+|tr|pasaklı}}
+* Walloon: {{tt+|wa|pourcea|m}}, {{tt+|wa|coshet|m}}
+* Welsh: {{tt+|cy|mochyn|m}}
 {{trans-bottom}}
 
 {{trans-top|derogatory slang for police officer}}
-* Basque: {{t+|eu|txakur}}
-* Czech: {{t+|cs|fízl|m}}
-* Dutch: {{t+|nl|flik|m}}, {{t+|nl|smeris|n}}, {{t+|nl|wout}}, {{t+|nl|juut}}, {{t+|nl|kit|p}}, {{t+|nl|kankerlijer|m}}, {{t|nl|tiefushoer|f}}, {{t+|nl|hoer|m|f}}
-* French: {{t+|fr|poulet|m}}, {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
-* German: {{t+|de|Bulle|m}}, {{t+|de|Büttel|m}} (obsolescent), {{t|de|Greifer|m}}, {{t|de|Greiferin|f}}, {{t|de|Udel|m}} {{qualifier|regional}}; {{t+|de|Kiberer|m}} {{qualifier|Austria}}, {{t+|de|Kieberer|m}} {{qualifier|Austria}}; {{t|de|Schugger|m}} {{qualifier|Switzerland}}, {{t+|de|Bullenschwein|n}}
-* Greek: {{t+|el|γουρούνι|n}}
-* Icelandic: {{t|is|löggusvín|n}}
+* Basque: {{tt+|eu|txakur}}
+* Czech: {{tt+|cs|fízl|m}}
+* Dutch: {{tt+|nl|flik|m}}, {{tt+|nl|smeris|n}}, {{tt+|nl|wout}}, {{tt+|nl|juut}}, {{tt+|nl|kit|p}}, {{tt+|nl|kankerlijer|m}}, {{tt|nl|tiefushoer|f}}, {{tt+|nl|hoer|m|f}}
+* French: {{tt+|fr|poulet|m}}, {{tt+|fr|flic|m}}, {{tt+|fr|keuf|m}} {{qualifier|verlan}}
+* German: {{tt+|de|Bulle|m}}, {{tt+|de|Büttel|m}} (obsolescent), {{tt|de|Greifer|m}}, {{tt|de|Greiferin|f}}, {{tt|de|Udel|m}} {{qualifier|regional}}; {{tt+|de|Kiberer|m}} {{qualifier|Austria}}, {{tt+|de|Kieberer|m}} {{qualifier|Austria}}; {{tt|de|Schugger|m}} {{qualifier|Switzerland}}, {{tt+|de|Bullenschwein|n}}
+* Greek: {{tt+|el|γουρούνι|n}}
+* Icelandic: {{tt|is|löggusvín|n}}
 {{trans-mid}}
-* Norwegian: {{t+|no|purk|m}}, {{t+|no|snut|m}}
-* Polish: {{t+|pl|pies|m}}
-* Portuguese: {{t+|pt|porco|m}}
-* Russian: {{t+|ru|му́сор|m}}
-* Spanish: {{t+|es|milico|m}} {{qualifier|Andes|River Plate region}}, {{t+|es|tira|f}} {{qualifier|S Mexico}}, {{t+|es|chota}} {{qualifier|N Mexico, El Salvador}}
-* Swahili: {{t+|sw|nguruwe}}
+* Norwegian: {{tt+|no|purk|m}}, {{tt+|no|snut|m}}
+* Polish: {{tt+|pl|pies|m}}
+* Portuguese: {{tt+|pt|porco|m}}
+* Russian: {{tt+|ru|му́сор|m}}
+* Spanish: {{tt+|es|milico|m}} {{qualifier|Andes|River Plate region}}, {{tt+|es|tira|f}} {{qualifier|S Mexico}}, {{tt+|es|chota}} {{qualifier|N Mexico, El Salvador}}
+* Swahili: {{tt+|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|difficult problem}}
-* Finnish: {{t+|fi|pähkinä}}
+* Finnish: {{tt+|fi|pähkinä}}
 {{trans-mid}}
-* Swahili: {{t+|sw|nguruwe}}
+* Swahili: {{tt+|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|cast metal block}}
-* Finnish: {{t+|fi|harkko}}
-* Russian: {{t+|ru|чу́шка|f}}, {{t+|ru|болва́нка|f}}
+* Finnish: {{tt+|fi|harkko}}
+* Russian: {{tt+|ru|чу́шка|f}}, {{tt+|ru|болва́нка|f}}
 {{trans-mid}}
-* Swahili: {{t+|sw|nguruwe}}
+* Swahili: {{tt+|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|mold for a cast metal block}}
-* Finnish: {{t+|fi|muotti}}
+* Finnish: {{tt+|fi|muotti}}
 {{trans-mid}}
-* Swahili: {{t+|sw|nguruwe}}
+* Swahili: {{tt+|sw|nguruwe}}
 {{trans-bottom}}
 
 {{trans-top|device to clean or inspect a pipe from inside}}
-* Finnish: {{t+|fi|porsas}}
+* Finnish: {{tt+|fi|porsas}}
 {{trans-mid}}
-* Swahili: {{t+|sw|nguruwe}}
+* Swahili: {{tt+|sw|nguruwe}}
+}}<!-- close {{multitrans}} -->
 {{trans-bottom}}
 
 {{checktrans-top}}
