--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -12,7 +12,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 
 Cognate with {{cog|sco|island}}, {{m|sco|iland}}, {{m|sco|yland||island}}, {{cog|fy|eilân||island}}, {{cog|stq|Ailound||island}}, {{cog|nl|eiland||island}}, {{cog|nds|Eiland||island}}, {{cog|de|Eiland||island}}, {{cog|sv|ö||island}}, {{cog|da|ø||island}}, {{cog|no|øy||island}}, {{cog|is|eyland||island}}.
 
-The insertion of ''s''—a 16th century spelling modification—is due to a change in spelling to the unrelated term {{m|en|isle}}, which previously lacked ''s'' (cf. {{noncog|enm|ile}}, {{m|enm|yle}}). The re-addition was mistakingly carried over to include ''iland'' as well. Related also to {{cog|de|Aue||water-meadow}}, {{cog|la|aqua||water}}. More at {{l|en|ea}}.
+The insertion of ⟨s⟩—a 16th century spelling modification—is due to a change in spelling to the unrelated term {{m|en|isle}}, which previously lacked ''s'' (cf. {{noncog|enm|ile}}, {{m|enm|yle}}). The re-addition was mistakingly carried over to include ''iland'' as well. Related also to {{cog|de|Aue||water-meadow}}, {{cog|la|aqua||water}}. More at {{l|en|ea}}.
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|en|/ˈaɪ̯lənd/}}
