--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -55,7 +55,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 ====Translations====
 {{trans-top|commercial solicitation}}
 * Albanian: {{t+|sq|publicitet|m}}
-* Arabic: {{t|ar|إِيذَان|m}}, {{t|ar|إِعْلَان|m}}
+* Arabic: {{t|ar|إِيذَان|m}}, {{t|ar|إِعْلَان|m}}, {{t|ar|إِشْهَار|m}}
 * Armenian: {{t+|hy|գովազդ}}
 * Asturian: {{t|ast|anunciu|m}}
 * Azerbaijani: {{t+|az|reklam}}, {{t+|az|elan}}
