--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -49,9 +49,9 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
 |kitchen island|Long Island|low island|Mersea Island|no man is an island|Norfolk Island
-|North Island|Puget Island|Rock Island
+|North Island|Puget Island|Rhode Island|Rock Island
 |safety island|security island|Island|sea-island|South Island|Stewart Island|tidal island
-|traffic island|Valentia Island}}
+|traffic island|Valentia Island|Vancouver Island|White Island}}
 
 ====Related terms====
 * {{l|en|insular}}
