--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -414,6 +414,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 {{head|en|conjunction}}
 
 # {{obsolete spelling of|en|than}}
+#* {{quote-book |en |title=Ouids Banquet of Sence. A Coronet for his Miſtreſſe Philoſophie, and his amorous Zodiacke. VVith a tranſlation of a Latine coppie, written by a Fryer, Anno Dom. 1400 |year=1595 |location=London |publisher=I. R. for Richard Smith |text=And as a Pible caſt into a Spring,&nbsp;/ Wee ſee a ſort of trembling cirkles riſe,&nbsp;/ One forming other in theyr iſſuing&nbsp;/ Till ouer all the Fount they circulize,&nbsp;/ So this perpetuall-motion-making kiſſe,&nbsp;/ Is propagate through all my faculties,&nbsp;/ And makes my breaſt an endleſſe Fount of bliſſe,&nbsp;/ Of which, if Gods could drink, theyr matchleſſe fare&nbsp;/ Would make them much more bleſſed '''then''' they are.}}
 # {{misspelling of|en|than}}
 
 ===Derived terms===
